--- a/src/UI/Custom/MyEditor.css
+++ b/src/UI/Custom/MyEditor.css
@@ -4,9 +4,9 @@
 }
 
 .demo-editor {
-  background-color: #f0f8ff;
+  background-color: #ffff;
   border-radius: 10px;
-  box-shadow: 1px 1px 10px 0px rgba(0, 37, 117, 0.25);
+  box-shadow: 1px 1px 10px 0px rgba(245, 245, 245, 0.208);
   padding: 10px;
   min-width: 750px;
   min-height: 300px;
