--- a/src/UI/Custom/TableProject/TableProject.module.css
+++ b/src/UI/Custom/TableProject/TableProject.module.css
@@ -1,4 +1,5 @@
 .select {
+    height: 30px;
     min-width: 100%;
     max-width: 100%;
     font-family: 'Montserrat';
@@ -10,6 +11,9 @@
     color: red;
 }
 
+.fonTable{
+    background-color: #B4B4B4;
+}
 
 .table {
     width: 100%;
@@ -46,7 +50,7 @@
     }
 
     & tbody {
-        height: 30px;
+        /* height: 30px; */
         font-family: 'Montserrat';
         font-size: 16px;
         color: #3A3A3A;
@@ -61,36 +65,47 @@
 
     input {
         width: 100%;
+        height: 100%;
     }
 
     & .numberTableColumn {
+        height: 30px;
         width: 2%;
     }
 
     & .nameTableColumn {
-        text-align: start;
+        height: 30px;
         width: 76%;
-        padding-left: 5px;
+        text-align: start;
+        padding-left: 10px;
+        background-color: #ffff;
     }
 
     & .nameProjectToProgramTableColumn {
+        height: 30px;
         text-align: start;
         width: 20%;
         padding-left: 5px;
+        background-color: #ffff;
     }
 
     & .imageTableColumn {
+        height: 30px;
         min-width: 8%;
     }
 
     & .dateTableColumn {
+        height: 30px;
         width: 8%;
         padding-left: 5px;
+        background-color: #ffff;
     }
 
     & .deleteTableColumn {
-        width: 2%;
-        min-width: 25px;
+        height: 30px;
+        width: 7.65%;
+        min-width: 7.65%;
+        background-color: #ffff;
 
         & :hover {
             background-color: rgb(240, 240, 240);
@@ -100,6 +115,7 @@
     }
 
     & .statusTableColumn {
+        height: 30px;
         width: 2%;
         min-width: 2%;
     }
